--- a/dock.html
+++ b/dock.html
@@ -1,82 +1,79 @@
-<div id="dock">
-  <button class="dock-btn" data-label="Home" onclick="window.location.href='index.html'">
+<div class="dock">
+  <a href="index.html" class="dock-icon" data-label="Home">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l9-9 9 9v9a2 2 0 0 1-2 2h-4a2 2 0 0 1-2-2v-4H9v4a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-9z"/>
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-4 0h4"/>
     </svg>
-  </button>
-  <button class="dock-btn" data-label="Games" onclick="window.location.href='games.html'">
+  </a>
+  <a href="about.html" class="dock-icon" data-label="About">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 10h4.764a2 2 0 0 1 1.789 1.106l2.447 4.894A2 2 0 0 1 21.236 19H14m-4 0H2.764a2 2 0 0 1-1.764-2.894l2.447-4.894A2 2 0 0 1 5.236 10H10m4 9v2m-4-2v2"/>
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z"/>
     </svg>
-  </button>
-  <button class="dock-btn" data-label="About" onclick="window.location.href='about.html'">
+  </a>
+  <a href="contact.html" class="dock-icon" data-label="Contact">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 4h.01M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0z"/>
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z"/>
     </svg>
-  </button>
-  <div class="dock-label" id="dockLabel"></div>
+  </a>
 </div>
 
 <style>
-#dock {
-  position: fixed;
-  bottom: 20px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(20, 20, 20, 0.85);
-  backdrop-filter: blur(8px);
-  padding: 12px 24px;
-  border-radius: 40px;
-  display: flex;
-  gap: 24px;
-  align-items: center;
-  z-index: 1000;
-  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-}
-.dock-btn {
-  background: none;
-  border: none;
-  cursor: pointer;
-  color: white;
-  width: 36px;
-  height: 36px;
-  border-radius: 50%;
-  transition: transform 0.2s ease, background 0.2s ease;
-}
-.dock-btn:hover {
-  background: rgba(255, 255, 255, 0.1);
-  transform: translateY(-4px);
-}
-.dock-btn svg {
-  width: 24px;
-  height: 24px;
-}
-.dock-label {
-  position: absolute;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  color: #fff;
-  background: rgba(0,0,0,0.7);
-  padding: 4px 10px;
-  border-radius: 8px;
-  font-size: 0.8rem;
-  opacity: 0;
-  transition: opacity 0.2s ease;
-  pointer-events: none;
-}
-</style>
+  .dock {
+    position: fixed;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: rgba(20, 20, 20, 0.85);
+    backdrop-filter: blur(10px);
+    border-radius: 25px;
+    padding: 10px 25px;
+    display: flex;
+    gap: 25px;
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
+    transition: all 0.3s ease;
+    z-index: 9999;
+  }
 
-<script>
-const dock = document.getElementById('dock');
-const label = document.getElementById('dockLabel');
-dock.querySelectorAll('.dock-btn').forEach(btn => {
-  btn.addEventListener('mouseenter', () => {
-    label.textContent = btn.getAttribute('data-label');
-    label.style.opacity = '1';
-  });
-  btn.addEventListener('mouseleave', () => {
-    label.style.opacity = '0';
-  });
-});
-</script>
+  .dock-icon {
+    position: relative;
+    color: #fff;
+    text-decoration: none;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: transform 0.2s ease;
+  }
+
+  .dock-icon:hover {
+    transform: translateY(-5px);
+  }
+
+  .dock-icon svg {
+    width: 24px;
+    height: 24px;
+  }
+
+  .dock-icon::after {
+    content: attr(data-label);
+    position: absolute;
+    bottom: -28px;
+    background: rgba(0, 0, 0, 0.75);
+    color: #fff;
+    padding: 3px 8px;
+    font-size: 0.7rem;
+    border-radius: 5px;
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.2s ease, transform 0.2s ease;
+    transform: translateY(5px);
+  }
+
+  .dock-icon:hover::after {
+    opacity: 1;
+    transform: translateY(0);
+  }
+</style>
