--- a/dock.html
+++ b/dock.html
@@ -1,20 +1,40 @@
 <div class="dock">
-  <a href="index.html" class="dock-icon" data-label="Home">
+  <a href="index.html" class="dock-item" data-label="Home">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-4 0h4"/>
+        d="M3 12l2-2m0 0l7-7 7 7m-2 2v7a1 1 0 01-1 1h-4a1 1 0 01-1-1v-4H9v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-7z"/>
     </svg>
   </a>
-  <a href="about.html" class="dock-icon" data-label="About">
+
+  <a href="about.html" class="dock-item" data-label="About">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z"/>
+        d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z"/>
     </svg>
   </a>
-  <a href="contact.html" class="dock-icon" data-label="Contact">
+
+  <a href="contact.html" class="dock-item" data-label="Contact">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-            d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z"/>
+        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z"/>
+    </svg>
+  </a>
+
+  <a href="settings.html" class="dock-item" data-label="Settings">
+    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+        d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4
+           4-1.79 4-4-1.79-4-4-4zm0-6a2 2 0 012 2v1.06a8.96
+           8.96 0 014.243 2.458l.754-.754a2 2 0 112.828
+           2.828l-.754.754A8.96 8.96 0 0120.94 10H22a2
+           2 0 012 2 2 2 0 01-2 2h-1.06a8.96 8.96 0
+           01-2.458 4.243l.754.754a2 2 0 11-2.828
+           2.828l-.754-.754A8.96 8.96 0 0114 20.94V22a2
+           2 0 01-2 2 2 2 0 01-2-2v-1.06a8.96 8.96 0
+           01-4.243-2.458l-.754.754a2 2 0 11-2.828-2.828l.754-.754A8.96
+           8.96 0 013.06 14H2a2 2 0 01-2-2 2 2 0 012-2h1.06a8.96
+           8.96 0 012.458-4.243l-.754-.754a2 2 0 112.828-2.828l.754.754A8.96
+           8.96 0 0110 3.06V2a2 2 0 012-2z"/>
     </svg>
   </a>
 </div>
@@ -25,55 +45,59 @@
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    background: rgba(20, 20, 20, 0.85);
+    background: rgba(25, 25, 25, 0.9);
     backdrop-filter: blur(10px);
-    border-radius: 25px;
-    padding: 10px 25px;
+    border-radius: 40px;
+    padding: 12px 25px;
     display: flex;
-    gap: 25px;
-    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.4);
-    transition: all 0.3s ease;
-    z-index: 9999;
+    gap: 28px;
+    box-shadow: 0 4px 25px rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    transition: background 0.3s ease;
   }
 
-  .dock-icon {
+  .dock-item {
     position: relative;
     color: #fff;
     text-decoration: none;
-    width: 30px;
-    height: 30px;
+    width: 38px;
+    height: 38px;
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: transform 0.2s ease;
+    border-radius: 50%;
+    transition: transform 0.25s ease, background 0.25s ease;
   }
 
-  .dock-icon:hover {
-    transform: translateY(-5px);
+  .dock-item:hover {
+    transform: translateY(-5px) scale(1.1);
+    background: rgba(255, 255, 255, 0.1);
   }
 
-  .dock-icon svg {
+  .dock-item svg {
     width: 24px;
     height: 24px;
   }
 
-  .dock-icon::after {
+  .dock-item::after {
     content: attr(data-label);
     position: absolute;
-    bottom: -28px;
-    background: rgba(0, 0, 0, 0.75);
-    color: #fff;
-    padding: 3px 8px;
-    font-size: 0.7rem;
-    border-radius: 5px;
+    bottom: -26px;
+    left: 50%;
+    transform: translateX(-50%) translateY(4px);
     opacity: 0;
+    font-size: 0.7rem;
+    color: #fff;
+    background: rgba(0, 0, 0, 0.75);
+    padding: 4px 8px;
+    border-radius: 6px;
     pointer-events: none;
     transition: opacity 0.2s ease, transform 0.2s ease;
-    transform: translateY(5px);
+    white-space: nowrap;
   }
 
-  .dock-icon:hover::after {
+  .dock-item:hover::after {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateX(-50%) translateY(0);
   }
 </style>
