--- a/dock.html
+++ b/dock.html
@@ -1,103 +1,80 @@
 <div class="dock">
-  <a href="index.html" class="dock-item" data-label="Home">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M3 12l2-2m0 0l7-7 7 7m-2 2v7a1 1 0 01-1 1h-4a1 1 0 01-1-1v-4H9v4a1 1 0 01-1 1H4a1 1 0 01-1-1v-7z"/>
-    </svg>
-  </a>
-
-  <a href="about.html" class="dock-item" data-label="About">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M13 16h-1v-4h-1m1-4h.01M12 2a10 10 0 100 20 10 10 0 000-20z"/>
-    </svg>
-  </a>
-
-  <a href="contact.html" class="dock-item" data-label="Contact">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-18 8h18a2 2 0 002-2V6a2 2 0 00-2-2H3a2 2 0 00-2 2v8a2 2 0 002 2z"/>
-    </svg>
-  </a>
-
-  <a href="settings.html" class="dock-item" data-label="Settings">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-        d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4
-           4-1.79 4-4-1.79-4-4-4zm0-6a2 2 0 012 2v1.06a8.96
-           8.96 0 014.243 2.458l.754-.754a2 2 0 112.828
-           2.828l-.754.754A8.96 8.96 0 0120.94 10H22a2
-           2 0 012 2 2 2 0 01-2 2h-1.06a8.96 8.96 0
-           01-2.458 4.243l.754.754a2 2 0 11-2.828
-           2.828l-.754-.754A8.96 8.96 0 0114 20.94V22a2
-           2 0 01-2 2 2 2 0 01-2-2v-1.06a8.96 8.96 0
-           01-4.243-2.458l-.754.754a2 2 0 11-2.828-2.828l.754-.754A8.96
-           8.96 0 013.06 14H2a2 2 0 01-2-2 2 2 0 012-2h1.06a8.96
-           8.96 0 012.458-4.243l-.754-.754a2 2 0 112.828-2.828l.754.754A8.96
-           8.96 0 0110 3.06V2a2 2 0 012-2z"/>
-    </svg>
-  </a>
+  <div class="dock-btn" onclick="window.location.href='index.html'">
+    <svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+    <span>Home</span>
+  </div>
+  <div class="dock-btn" onclick="window.location.href='favorites.html'">
+    <svg viewBox="0 0 24 24"><path d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 6 4 4 6.5 4c1.74 0 3.41 1.01 4.13 2.44C11.09 5.01 12.76 4 14.5 4 17 4 19 6 19 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/></svg>
+    <span>Favorites</span>
+  </div>
+  <div class="dock-btn" onclick="window.location.href='settings.html'">
+    <svg viewBox="0 0 24 24"><path d="M12 15.5A3.5 3.5 0 1 0 12 8.5a3.5 3.5 0 0 0 0 7zm8.94-2.78l1.06-.82-1.5-2.6-1.22.48a7.96 7.96 0 0 0-1.46-.85l-.22-1.3h-3l-.22 1.3c-.52.2-1.02.48-1.46.85l-1.22-.48-1.5 2.6 1.06.82c-.04.26-.06.52-.06.78s.02.52.06.78l-1.06.82 1.5 2.6 1.22-.48c.44.37.94.65 1.46.85l.22 1.3h3l.22-1.3c.52-.2 1.02-.48 1.46-.85l1.22.48 1.5-2.6-1.06-.82c.04-.26.06-.52.06-.78s-.02-.52-.06-.78z"/></svg>
+    <span>Settings</span>
+  </div>
 </div>
 
 <style>
-  .dock {
-    position: fixed;
-    bottom: 20px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(25, 25, 25, 0.9);
-    backdrop-filter: blur(10px);
-    border-radius: 40px;
-    padding: 12px 25px;
-    display: flex;
-    gap: 28px;
-    box-shadow: 0 4px 25px rgba(0, 0, 0, 0.5);
-    z-index: 1000;
-    transition: background 0.3s ease;
-  }
+.dock {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(20, 20, 20, 0.8);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(255,255,255,0.1);
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  gap: 25px;
+  padding: 15px 30px 20px;
+  box-shadow: 0 4px 20px rgba(0,0,0,0.6);
+  z-index: 1000;
+}
 
-  .dock-item {
-    position: relative;
-    color: #fff;
-    text-decoration: none;
-    width: 38px;
-    height: 38px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    transition: transform 0.25s ease, background 0.25s ease;
-  }
+.dock-btn {
+  position: relative;
+  width: 45px;
+  height: 45px;
+  background: rgba(255,255,255,0.08);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all .25s ease;
+  cursor: pointer;
+}
 
-  .dock-item:hover {
-    transform: translateY(-5px) scale(1.1);
-    background: rgba(255, 255, 255, 0.1);
-  }
+.dock-btn:hover {
+  background: rgba(255,255,255,0.2);
+  transform: translateY(-8px);
+}
 
-  .dock-item svg {
-    width: 24px;
-    height: 24px;
-  }
+.dock-btn svg {
+  width: 24px;
+  height: 24px;
+  fill: #fff;
+  pointer-events: none;
+}
 
-  .dock-item::after {
-    content: attr(data-label);
-    position: absolute;
-    bottom: -26px;
-    left: 50%;
-    transform: translateX(-50%) translateY(4px);
-    opacity: 0;
-    font-size: 0.7rem;
-    color: #fff;
-    background: rgba(0, 0, 0, 0.75);
-    padding: 4px 8px;
-    border-radius: 6px;
-    pointer-events: none;
-    transition: opacity 0.2s ease, transform 0.2s ease;
-    white-space: nowrap;
-  }
+.dock-btn span {
+  position: absolute;
+  bottom: -25px;
+  left: 50%;
+  transform: translateX(-50%) translateY(10px);
+  background: rgba(20,20,20,0.9);
+  color: #fff;
+  font-size: 0.75rem;
+  padding: 3px 8px;
+  border-radius: 8px;
+  white-space: nowrap;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 0.25s ease;
+}
 
-  .dock-item:hover::after {
-    opacity: 1;
-    transform: translateX(-50%) translateY(0);
-  }
+.dock-btn:hover span {
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
+}
 </style>
