--- a/single-html/Bloons TD.html
+++ b/single-html/Bloons TD.html
@@ -1,26 +1,16 @@
-<html>
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Bloons TD</title>
-    <link rel="icon" type="image/x-icon" href="bloonstd.jpg" />
-    <link rel="shortcut icon" type="image/x-icon" href="bloonstd.jpg" />
-  </head>
-  <body>
-    <script src="/js/main.js"></script>
-    <div id="ruffle" width="100%" height="100%"></div>
-    <script src="ruffle.js"></script>
-    <script>
-      window.RufflePlayer = window.RufflePlayer || {};
-      window.addEventListener("load", (event) => {
-        const ruffle = window.RufflePlayer.newest();
-        const player = ruffle.createPlayer();
-        const container = document.getElementById("ruffle");
-        player.id = "player";
-        player.style.width = "100%";
-        player.style.height = "100%";
-        container.appendChild(player);
-        player.load("bloons_tower_defense_1.swf");
-      });
-    </script>
-  </body>
-</html>
+<style>
+.top-layer {
+             overflow-y: auto;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #fff; 
+            z-index: 9999;
+        }
+    </style>
+    <div class="top-layer">
+        <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
+        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/files@refs/heads/main/bloonstd/bloons_tower_defense_1.swf" type="application/x-shockwave-flash" width="100%"></embed>
+    </div>
