--- a/single-html/Ray Part 2.html
+++ b/single-html/Ray Part 2.html
@@ -13,5 +13,5 @@
     </style>
     <div class="top-layer">
         <script src="https://unpkg.com/@ruffle-rs/ruffle"></script>
-        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Inkin6779/BloonsTD3@refs/heads/main/btd3.swf" type="application/x-shockwave-flash" width="100%"></embed>
+        <embed height="100%" pluginspage=" http://www.macromedia.com/go/getflashplayer" src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/shush@main/Ray-part2.swf" type="application/x-shockwave-flash" width="100%"></embed>
     </div>
