--- a/dock.html
+++ b/dock.html
@@ -1,24 +1,37 @@
-<div class="dock">
-  <div class="dock-btn" data-url="home.html"><svg viewBox="0 0 24 24"><path d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg><span>Home</span></div>
-
-  <div class="dock-btn" data-url="games.html"><svg viewBox="0 0 512 512"><path d="M467.51,248.83c-18.4-83.18-45.69-136.24-89.43-149.17A91.5,91.5,0,0,0,352,96c-26.89,0-48.11,16-96,16s-69.15-16-96-16a99.09,99.09,0,0,0-27.2,3.66C89,112.59,61.94,165.7,43.33,248.83c-19,84.91-15.56,152,21.58,164.88,26,9,49.25-9.61,71.27-37,25-31.2,55.79-40.8,119.82-40.8s93.62,9.6,118.66,40.8c22,27.41,46.11,45.79,71.42,37.16C487.1,399.86,486.52,334.74,467.51,248.83Z" style="fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:32"/><circle cx="292" cy="224" r="20" fill="#fff"/><circle cx="336" cy="180" r="20" fill="#fff"/><circle cx="380" cy="224" r="20" fill="#fff"/><line x1="160" y1="176" x2="160" y2="272" stroke="#fff" stroke-linecap="round" stroke-width="32"/><line x1="208" y1="224" x2="112" y2="224" stroke="#fff" stroke-linecap="round" stroke-width="32"/></svg><span>Games</span></div>
-
-  <div class="dock-btn" data-url="pc-games.html"><svg viewBox="0 0 24 24" fill="none"><path d="M12 17V21M8 21h16M6.2 17h11.6c1.12 0 1.68 0 2.108-.218.376-.192.682-.498.874-.874.218-.428.218-.988.218-2.108V6.2c0-1.12 0-1.68-.218-2.108a2.077 2.077 0 0 0-.874-.874C19.48 3.11 18.92 3.11 17.8 3.11H6.2c-1.12 0-1.68 0-2.108.218a2.077 2.077 0 0 0-.874.874C3 4.52 3 5.08 3 6.2v7.6c0 1.12 0 1.68.218 2.108.192.376.498.682.874.874.428.218.988.218 2.108.218z" stroke="#fff" stroke-width="2"/></svg><span>PC Games</span></div>
-
-  <div class="dock-btn" data-url="unbl0ck.html"><svg fill="#fff" viewBox="144 144 512 512"><path d="..."/></svg><span>Unblockers</span></div>
-
-  <div class="dock-btn" data-url="https://bazinga.great-site.net/recommend.php"><svg viewBox="0 0 360 480" fill="none"><path d="..."/></svg><span>Game Recommend</span></div>
-
-  <div class="dock-btn" data-url="https://bazinga.great-site.net/broken-game.php"><svg viewBox="0 0 64 64" stroke-width="3" stroke="#fff" fill="none"><path d="..."/></svg><span>Report a broken game</span></div>
-
-  <div class="dock-btn" data-url="https://bazinga.great-site.net/changelogs.php"><svg viewBox="0 0 1024 1024" fill="#fff"><path d="..."/></svg><span>Changelogs</span></div>
-</div>
-
 <style>
-.dock{position:fixed;bottom:20px;left:50%;transform:translateX(-50%);background:rgba(20,20,20,.8);backdrop-filter:blur(10px);border:1px solid rgba(255,255,255,.1);border-radius:50px;display:flex;justify-content:center;align-items:flex-end;gap:25px;padding:15px 30px 20px;box-shadow:0 4px 20px rgba(0,0,0,.6);z-index:1000}
-.dock-btn{position:relative;width:45px;height:45px;background:rgba(255,255,255,.08);border-radius:50%;display:flex;justify-content:center;align-items:center;transition:all .25s ease;cursor:pointer}
-.dock-btn:hover{background:rgba(255,255,255,.2);transform:translateY(-8px)}
-.dock-btn svg{width:24px;height:24px;fill:#fff;pointer-events:none}
-.dock-btn span{position:absolute;bottom:-25px;left:50%;transform:translateX(-50%) translateY(10px);background:rgba(20,20,20,.9);color:#fff;font-size:.75rem;padding:3px 8px;border-radius:8px;white-space:nowrap;opacity:0;pointer-events:none;transition:all .25s ease}
-.dock-btn:hover span{opacity:1;transform:translateX(-50%) translateY(0)}
+#dock {
+  position: fixed;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  background: rgba(20, 20, 20, 0.9);
+  border-radius: 25px;
+  padding: 8px 16px;
+  display: flex;
+  gap: 12px;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  z-index: 1000;
+}
+.dock-btn {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 22px;
+  cursor: pointer;
+  transition: transform 0.2s, color 0.2s;
+}
+.dock-btn:hover {
+  transform: scale(1.3);
+  color: #0af;
+}
 </style>
+
+<div id="dock">
+  <button class="dock-btn" data-url="home.html" title="Home">🏠</button>
+  <button class="dock-btn" data-url="games.html" title="Games">🎮</button>
+  <button class="dock-btn" data-url="pc-games.html" title="PC Games">💻</button>
+  <button class="dock-btn" data-url="unbl0ck.html" title="Unblocked">🌐</button>
+  <button class="dock-btn" data-url="https://bazinga.great-site.net/recommend.php" title="Recommend">⭐</button>
+  <button class="dock-btn" data-url="https://bazinga.great-site.net/broken-game.php" title="Broken Game">🧩</button>
+  <button class="dock-btn" data-url="https://bazinga.great-site.net/changelogs.php" title="Changelogs">📰</button>
+</div>
