--- a/games.html
+++ b/games.html
@@ -6,124 +6,27 @@
 <title>Bazinga Games</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 <style>
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
-}
-
-body {
-  background: #000;
-  color: #f5f5f5;
-  min-height: 100vh;
-  padding: 2rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-}
-
-.header {
-  text-align: center;
-  margin-bottom: 2rem;
-}
-
-.page-title {
-  font-size: 2.5rem;
-  font-weight: 700;
-  background: linear-gradient(45deg,#fff,#aaa);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  margin-bottom: 1rem;
-}
-
-.search-bar {
-  width: 100%;
-  max-width: 500px;
-  margin: 0 auto 2rem;
-  display: block;
-  padding: .75rem 1rem;
-  border: 1px solid rgba(255,255,255,.2);
-  border-radius: 25px;
-  background: rgba(255,255,255,.05);
-  color: #fff;
-  outline: none;
-  font-size: 1rem;
-}
-
-.search-bar:focus {
-  border-color: rgba(255,255,255,.4);
-}
-
-.games-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1.5rem;
-  flex: 1;
-}
-
-.game-card {
-  background: rgba(255,255,255,.05);
-  border: 1px solid rgba(255,255,255,.1);
-  border-radius: 15px;
-  overflow: hidden;
-  cursor: pointer;
-  transition: transform .3s, box-shadow .3s;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  height: 220px; /* fixed card height */
-}
-
-.game-card:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.5);
-}
-
-.game-image {
-  width: 100%;
-  height: 150px;
-  object-fit: contain;
-  background: #000;
-  display: block;
-}
-
-.game-info {
-  padding: 1rem;
-  flex: 1;
-}
-
-.game-title {
-  font-size: 1rem;
-  font-weight: 500;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  display: -webkit-box;
-  -webkit-line-clamp: 2;
-  -webkit-box-orient: vertical;
-  line-height: 1.3;
-}
-
-.no-results {
-  text-align: center;
-  padding: 2rem;
-  color: #888;
-}
+/* --- Styles kept from your original --- */
+* { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Poppins', sans-serif; }
+body { background: #000; color: #f5f5f5; min-height: 100vh; padding: 2rem; display: flex; flex-direction: column; justify-content: space-between; }
+.header { text-align: center; margin-bottom: 2rem; }
+.page-title { font-size: 2.5rem; font-weight: 700; background: linear-gradient(45deg,#fff,#aaa); -webkit-background-clip: text; -webkit-text-fill-color: transparent; margin-bottom: 1rem; }
+.search-bar { width: 100%; max-width: 500px; margin: 0 auto 2rem; display: block; padding: .75rem 1rem; border: 1px solid rgba(255,255,255,.2); border-radius: 25px; background: rgba(255,255,255,.05); color: #fff; outline: none; font-size: 1rem; }
+.search-bar:focus { border-color: rgba(255,255,255,.4); }
+.games-grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(250px, 1fr)); gap: 1.5rem; flex: 1; }
+.game-card { background: rgba(255,255,255,.05); border: 1px solid rgba(255,255,255,.1); border-radius: 15px; overflow: hidden; cursor: pointer; transition: transform .3s, box-shadow .3s; display: flex; flex-direction: column; justify-content: flex-start; height: 220px; }
+.game-card:hover { transform: translateY(-5px); box-shadow: 0 10px 20px rgba(0,0,0,.5); }
+.game-image { width: 100%; height: 150px; object-fit: contain; background: #000; display: block; }
+.game-info { padding: 1rem; flex: 1; }
+.game-title { font-size: 1rem; font-weight: 500; overflow: hidden; text-overflow: ellipsis; display: -webkit-box; -webkit-line-clamp: 2; -webkit-box-orient: vertical; line-height: 1.3; }
+.no-results { text-align: center; padding: 2rem; color: #888; }
+#version-indicator { font-size: 2rem; color: #f5f5f5; font-weight: 500; text-align: center; line-height: 1; margin-bottom: 0.5rem; }
 </style>
 </head>
-
-<div style="font-size: 2rem; color: #f5f5f5; font-weight: 500; text-align: center; line-height: 1;margin-bottom: 0.1rem;" id="version-indicator">Version: ...</div>
-
-<script>
-// Version fetch with timestamp (cache-busting)
-const ts = () => Date.now();
-fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${ts()}`)
-  .then(res => res.text())
-  .then(v => document.getElementById('version-indicator').textContent = `Version: ${v.trim()}`)
-  .catch(() => document.getElementById('version-indicator').textContent = 'Version: unavailable');
-</script>
-
 <body>
+
+<div id="version-indicator">Version: ...</div>
+
 <div class="header">
 <h1 class="page-title">Bazinga Games</h1>
 <input type="text" class="search-bar" id="searchInput" placeholder="Search games..." autocomplete="off">
@@ -131,6 +34,23 @@ fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/versi
 
 <div class="games-grid" id="gamesGrid"></div>
 <div class="no-results" id="noResults" style="display:none">No games found</div>
+
+<script>
+// --- Version fetch ---
+(async () => {
+  const versionEl = document.getElementById('version-indicator');
+  const ts = () => Date.now();
+  try {
+    const res = await fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/version.txt?t=${ts()}`);
+    if (!res.ok) throw new Error('Network response not ok');
+    const v = await res.text();
+    versionEl.textContent = `Version: ${v.trim()}`;
+  } catch (err) {
+    console.warn(err);
+    versionEl.textContent = 'Version: unavailable';
+  }
+})();
+</script>
 
 <script>
 (async () => {
@@ -163,7 +83,6 @@ fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/versi
     }))
     .catch(() => []);
 
-  // Lazy loading setup
   const lazyLoadImages = (rootEl) => {
     const imgs = rootEl.querySelectorAll('img[data-src]');
     if ('IntersectionObserver' in window) {
@@ -178,10 +97,7 @@ fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/versi
         });
       });
       imgs.forEach(img => observer.observe(img));
-    } else {
-      // fallback: load all immediately
-      imgs.forEach(img => { img.src = img.dataset.src; });
-    }
+    } else imgs.forEach(img => img.src = img.dataset.src);
   };
 
   function makeCard(zone) {
@@ -211,7 +127,7 @@ fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/versi
     }
     noResults.style.display = 'none';
     list.forEach(z => grid.appendChild(makeCard(z)));
-    lazyLoadImages(grid); // activate lazy loading after render
+    lazyLoadImages(grid);
   }
 
   render(zones);
@@ -226,5 +142,6 @@ fetch(`https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/main/versi
   });
 })();
 </script>
+
 </body>
 </html>
