Update navigation dock position in homepage text

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
     <h1 id="version-indicator">Version: …</h1>
   </header>
   <h1 class="main-text">
-    This is the Bazinga Games homepage. Please use the dock below to navigate.
+    This is the Bazinga Games homepage. Please use the dock above to navigate.
   </h1>
 
   <script>
