--- a/pc-games.html
+++ b/pc-games.html
@@ -46,13 +46,13 @@
       display:block;
     }
 #pc-games-widget .game-info {
-  padding: 0.5rem 1rem 1rem 1rem; /* adjust top/bottom spacing */
+  padding: 0.5rem 1rem 1rem 1rem;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  background: rgba(255,255,255,.05); /* same as game card */
-  border-top-left-radius: 0; /* optional: keep corners sharp at top */
+  background: #1A1A1A;
+  border-top-left-radius: 0;
   border-bottom-left-radius: 15px;
   border-bottom-right-radius: 15px;
   width: 100%;
@@ -68,9 +68,9 @@
   -webkit-box-orient: vertical;
   line-height: 1.3;
   text-align: center;
-  padding-top: 0.5rem; /* space above the title */
+  padding-top: 0.5rem;
   width: 100%;
-  color: #f5f5f5; /* make sure text is visible on dark background */
+  color: #f5f5f5;
 }
     #pc-games-widget .no-results{
       display:block;
