--- a/singlepage.html
+++ b/singlepage.html
@@ -101,7 +101,13 @@
 <div id="dock"></div>
 <div id="loader">Loading…</div>
 <div id="widget-host"></div>
-
+<!--   
+{
+    name: "OPENS IN NEW TAB",
+    icon: "https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/f7d2f049e75010f8acf622c1e46b3b180d45e363/icons/report-game.svg",
+    url: `new-tab: true;https://bazinga.great-site.net/broken-game.php`
+  }, 
+-->
 <script>
 const dockItems = [
   {
