Update Rocket Soccer Derby.html

--- a/single-html/Rocket Soccer Derby.html
+++ b/single-html/Rocket Soccer Derby.html
@@ -35,7 +35,7 @@
 	</script>
 </head>
 <body>
-	<script src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@latest/rsd/patch/js/poki-master-loader.js"></script>
+	<script src="https://cdn.jsdelivr.net/gh/Calvin99Cooler/bazinga-games-assets@3318cd8963006d747bf4a3615a7422f387215017/rsd/patch/js/poki-master-loader.js"></script>
 
 </body>
 </html>
