Update Throw a potato in space.html

--- a/single-html/Throw a potato in space.html
+++ b/single-html/Throw a potato in space.html
@@ -8,7 +8,7 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="HandheldFriendly" content="true">
-  <title>Throw a Potato</title>
+  <title>Throw a Potato in Space</title>
 
   <!-- EditMySite CSS -->
   <link rel="stylesheet" href="https://124959627-307704633294331326.preview.editmysite.com/uploads/b/147739771-455646582524654724/files/style.css">
