--- a/pc-games.html
+++ b/pc-games.html
@@ -82,7 +82,7 @@
 
   <div class="header">
     <h1 class="page-title">PC Games</h1>
-    <h2><a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
+    <h2>⚠️THESE GAMES DONT WORK ON CHROMEBOOKS ONLY THE DESKTOPS⚠️ - <a style="color:white;" href="instructions.txt" target="_blank">Click here if you're confused</a></h2>
   </div>
 
   <div class="games-grid" id="gamesGrid">
