--- a/games.html
+++ b/games.html
@@ -1,7 +1,7 @@
+<!-- ==========  GAMES WIDGET  ========== -->
 <div id="bazinga-games-widget"></div>
 
 <script>
-/* ==========  SINGLE-DIV LOADER  ========== */
 (() => {
   const id  = 'bazinga-games-widget';
   const cnt = document.getElementById(id);
