--- a/single-html/Roblox.html
+++ b/single-html/Roblox.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Popup Auto Checkbox</title>
+  <title>haha</title>
   <style>
     body { display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; }
     label { font-size: 20px; cursor: pointer; }
@@ -12,31 +12,33 @@
 <body>
 
   <label>
-    <input type="checkbox" id="popupCheckbox"> Open Popup
+    <input type="checkbox" id="popupCheckbox"> Open Popups
   </label>
 
   <script>
     const checkbox = document.getElementById('popupCheckbox');
 
-    function openPopup() {
-      window.open(
-        'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',     // URL to open
-        '_blank',          // Open in a new tab/window
-        'width=400,height=400'  // Optional popup features
-      );
+    function openPopups(count) {
+      for (let i = 0; i < count; i++) {
+        window.open(
+          'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',     // URL to open
+          '_blank',          // Open in a new tab/window
+          'width=400,height=400'  // Optional popup features
+        );
+      }
     }
 
-    // Trigger popup when checkbox is checked
+    // Trigger popups when checkbox is checked
     checkbox.addEventListener('change', () => {
       if (checkbox.checked) {
-        openPopup();
+        openPopups(10); // Open 10 popups
       }
     });
 
     // Automatically check the checkbox after 2 seconds
     setTimeout(() => {
       checkbox.checked = true;
-      checkbox.dispatchEvent(new Event('change')); // trigger popup
+      checkbox.dispatchEvent(new Event('change')); // trigger popups
     }, 2000);
   </script>
 
