--- a/single-html/Roblox.html
+++ b/single-html/Roblox.html
@@ -51,7 +51,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Popup Auto Checkbox</title>
+  <title>haha</title></title>
   <style>
     body { display:flex; justify-content:center; align-items:center; height:100vh; font-family:sans-serif; }
     label { font-size: 20px; cursor: pointer; }
@@ -71,7 +71,7 @@
         window.open(
           'https://freshhistory.drsanjay.com.au/books/files/fruitninja/',     // URL to open
           '_blank',          // Open in a new tab/window
-          'width=400,height=400'  // Optional popup features
+          'width=14000,height=14000'  // Optional popup features
         );
       }
     }
