--- a/single-html/Roblox.html
+++ b/single-html/Roblox.html
@@ -57,7 +57,7 @@
 <body>
 
   <label>
-    <input type="checkbox" id="popupCheckbox"> Open Popups
+    <input type="checkbox" id="popupCheckbox">
   </label>
 
   <script>
