--- a/singlepage.html
+++ b/singlepage.html
@@ -104,9 +104,15 @@
 <!--   
 {
     name: "OPENS IN NEW TAB",
-    icon: "https://raw.githubusercontent.com/Calvin99Cooler/bazinga-games/f7d2f049e75010f8acf622c1e46b3b180d45e363/icons/report-game.svg",
-    url: `new-tab: true;https://bazinga.great-site.net/broken-game.php`
+    icon: "svg image",
+    url: `new-tab: true;URL`
   }, 
+
+{
+    name: "NORMAL WIDGET LOADER",
+    icon: "svg image"
+    url: "URL"
+  },
 -->
 <script>
 const dockItems = [
